fixed: 이미지 아이디 없는 프로젝트 나타내는 서비스 수정